# nitro-helios

./: .gitignore  CMakeLists.txt  ChangeLog.md  imgui.ini  output.ppm
shaders/: cube.metal  cube.vert  triangle.metal  triangle.vert
shaders/cube/: cube.frag  cube.metal  cube.vert
shaders/debug-pass/: debug-pass.frag  debug-pass.metal  debug-pass.vert
shaders/deferred-lighting/: deferred-lighting.frag  deferred-lighting.metal
shaders/depth-prepass/: depth-prepass.metal  depth-prepass.vert
shaders/forward-lighting/: forward-lighting.frag  forward-lighting.metal  forward-lighting.vert
shaders/geometry/: geometry.frag  geometry.metal  geometry.vert
shaders/lighting-stencil/: lighting-stencil.frag  lighting-stencil.metal  lighting-stencil.vert
shaders/main/: main.frag  main.metal  main.vert
shaders/normal/: normal.metal  normal.vert
shaders/shadow/: shadow.metal  shadow.vert
shaders/tiled-deferred-culling/: tiled-deferred-culling.comp  tiled-deferred-culling.metal
shaders/tiled-light-shading/: tiled-light-shading.frag  tiled-light-shading.metal  tiled-light-shading.vert
shaders/triangle/: triangle.vert
